# azure-ml-federated-learning

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DataExploration.ipynb  README.md  config.yaml  nlp-use-case.ipynb  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: delete-run-history.sh
.github/workflows/: build-test.yaml  clear-pipeline-run-history.yaml  fl-dataprep-pneumonia.yml  pipeline-e2e-test.yaml  pipeline-test.yaml  pipeline-validation.yaml  python.yaml  release-branch-test.yaml  test_bicep_arm_build.yaml
automated_provisioning/: Dockerfile  README.md
automated_provisioning/arm/: managed_k8s.json
automated_provisioning/external_silos/: Dockerfile  README.md
automated_provisioning/kube_instance/: my_instance_type.yaml
automated_provisioning/ps/: AzureUtilities.ps1  ChangeComputeSize.ps1  ConnectSiloToOrchestrator.ps1  CreateK8sCluster.ps1
docs/: README.md  concepts.md  examples_benchmark.md  experiment.md  external-silos.md  factory-tutorial.md  glossary.md  guide.md  literal-factory-tutorial.md  milestones.md  plan.md  provisioning.md  quickstart.md  ramp-up-plan.md  roadmap.md  troubleshoot.md  tsg.md  vanilla_demo.md
examples/: README.md  environment.yml
examples/components/MNIST_VERTICAL/psi/SymmetricPSI/: CMakeLists.txt  psi.cpp
fl_arc_k8s/: README.md  environment.yml  requirements.txt
mlops/: README.md
mlops/arm/: README.md  (+24 more)
plan/: milestones.md  roadmap-to-fl-poc.md
release-notes/: 2022-09.md
tes-api-on-azure-ml/: README.md  demo.py  environment.yml  requirements.txt
tests/: requirements.txt
(+692 files in other folders)
